# buddy_system_example

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yml
.github/workflows/: backend_ci.yml
backend/: __init__.py  auth.py  buddy_system.db  database.py  entities.py  fake_db.json  main.py  seed_database.py
backend/routers/: animals.py  users.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/__tests__/: App.test.jsx  vitest.setup.js
frontend/__tests__/mocks/: fixtures.js  handlers.js  node.js
frontend/src/: App.css  App.jsx  hooks.js  index.css
frontend/src/components/: Animal.jsx  Animals.css  Animals.jsx  AnimalsPage.jsx  Button.jsx  ColorsPage.jsx  Counter.jsx  FormInput.jsx  Greeter.jsx  LeftNav.jsx  Login.jsx  NewAnimal.jsx  Profile.jsx  Registration.jsx  TopNav.jsx
frontend/src/context/: auth.jsx  user.jsx
frontend/src/utils/: api.js
frontendV1/: index.html  main.js
frontendV2/: index.html  package-lock.json  package.json
frontendV2/src/: App.jsx
frontendV2/src/components/: AnimalsPage.css  AnimalsPage.jsx  Greeter.css
tests/backend/: conftest.py  database_test.py
tests/backend/routers/: animals_test.py  users_test.py
