[tool.poetry]
name = "buddy-system"
version = "0.1.0"
description = ""
authors = ["dw <itscomputers@proton.me>"]
readme = "README.md"
packages = [{include = "buddy_system"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
pytest = "^7.4.4"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
