[tool.poetry]
name = "buddy-system"
version = "0.1.0"
description = ""
authors = ["dw <itscomputers@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
sqlmodel = "0.0.16"
passlib = "1.7.4"
python-jose = "3.3.0"
bcrypt = "4.0.1"
cryptography = "42.0.2"
python-multipart = "^0.0.9"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
pytest = "^7.4.0"
httpx = "^0.26.0"
pyclean = "^3.0.0"


[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
